--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -54,6 +54,96 @@
         <listener-class>com.zhan.app1.Listener</listener-class>
     </listener>
     
+            <servlet>
+        <servlet-name>start</servlet-name>
+        <jsp-file>/start.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>start</servlet-name>
+        <url-pattern>/start</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <jsp-file>/login.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>register</servlet-name>
+        <jsp-file>/register.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>register</servlet-name>
+        <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>request_apartment</servlet-name>
+        <jsp-file>/request_apartment.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>request_apartment</servlet-name>
+        <url-pattern>/request_apartment</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>admin</servlet-name>
+        <jsp-file>/admin.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>admin</servlet-name>
+        <url-pattern>/admin</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>orders</servlet-name>
+        <jsp-file>/orders.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>orders</servlet-name>
+        <url-pattern>/orders</url-pattern>
+    </servlet-mapping>
+    
+        <servlet>
+        <servlet-name>ListAndOpen</servlet-name>
+        <jsp-file>/ListAndOpen.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ListAndOpen</servlet-name>
+        <url-pattern>/ListAndOpen</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>addopenroom</servlet-name>
+        <jsp-file>/addopenroom.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>addopenroom</servlet-name>
+        <url-pattern>/addopenroom</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>cabinet</servlet-name>
+        <jsp-file>/cabinet.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>cabinet</servlet-name>
+        <url-pattern>/cabinet</url-pattern>
+    </servlet-mapping>
+     
+    <servlet>
+        <servlet-name>wait_order</servlet-name>
+        <jsp-file>/wait_order.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>wait_order</servlet-name>
+        <url-pattern>/wait_order</url-pattern>
+    </servlet-mapping>
+    
     <session-config>
         <session-timeout>
             30
