--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-
     <servlet>
-        <servlet-name>Controller</servlet-name>
-        <servlet-class>com.zhan.app1.Controller</servlet-class>
+        <servlet-name>Servlet</servlet-name>
+        <servlet-class>Servlet.Servlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Controller</servlet-name>
+        <servlet-name>Servlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
@@ -21,128 +20,116 @@
         <servlet-name>default</servlet-name>
         <url-pattern>*.png</url-pattern>
     </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern>*.txt</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern>*.gif</url-pattern>
-    </servlet-mapping>
-      
+    
     <filter>
         <filter-name>FilterEncoding</filter-name>
-        <filter-class>com.zhan.app1.FilterEncoding</filter-class>
+        <filter-class>Filters.FilterEncoding</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>FilterEncoding</filter-name>
         <url-pattern>/</url-pattern>
-        <url-pattern>/Controller</url-pattern>
     </filter-mapping>
     
     <filter>
-        <filter-name>FilterStart</filter-name>
-        <filter-class>com.zhan.app1.FilterStart</filter-class>
+        <filter-name>FilterLinks</filter-name>
+        <filter-class>Filters.FilterLinks</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>FilterStart</filter-name>
+        <filter-name>FilterLinks</filter-name>
+        <url-pattern>/</url-pattern>
+        <url-pattern>/FilterLink</url-pattern>
+    </filter-mapping>
+    
+    <filter>
+        <filter-name>FilterStartPage</filter-name>
+        <filter-class>Filters.FilterStartPage</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterStartPage</filter-name>
         <url-pattern>/</url-pattern>
     </filter-mapping>
     
-    <listener>
-        <description>Listener</description>
-        <listener-class>com.zhan.app1.Listener</listener-class>
-    </listener>
+    <filter>
+        <filter-name>FilterLogin</filter-name>
+        <filter-class>Filters.FilterLogin</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterLogin</filter-name>
+        <url-pattern>/FilterLogin</url-pattern>
+    </filter-mapping>
     
-            <servlet>
-        <servlet-name>start</servlet-name>
-        <jsp-file>/start.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>start</servlet-name>
-        <url-pattern>/start</url-pattern>
-    </servlet-mapping>
+    <filter>
+        <filter-name>FilterRegister</filter-name>
+        <filter-class>Filters.FilterRegister</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterRegister</filter-name>
+        <url-pattern>/FilterRegister</url-pattern>
+    </filter-mapping>
     
-    <servlet>
-        <servlet-name>login</servlet-name>
-        <jsp-file>/login.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>login</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
+    <filter>
+        <filter-name>FilterRequestApartment</filter-name>
+        <filter-class>Filters.FilterRequestApartment</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterRequestApartment</filter-name>
+        <url-pattern>/FilterRequestApartment</url-pattern>
+    </filter-mapping>
     
-    <servlet>
-        <servlet-name>register</servlet-name>
-        <jsp-file>/register.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>register</servlet-name>
-        <url-pattern>/register</url-pattern>
-    </servlet-mapping>
+    <filter>
+        <filter-name>FilterApartmentBill</filter-name>
+        <filter-class>Filters.FilterApartmentBill</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterApartmentBill</filter-name>
+        <url-pattern>/FilterApartmentBill</url-pattern>
+    </filter-mapping>
     
-    <servlet>
-        <servlet-name>request_apartment</servlet-name>
-        <jsp-file>/request_apartment.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>request_apartment</servlet-name>
-        <url-pattern>/request_apartment</url-pattern>
-    </servlet-mapping>
+    <filter>
+        <filter-name>FilterAdmin</filter-name>
+        <filter-class>Filters.ADMIN.FilterAdmin</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterAdmin</filter-name>
+        <url-pattern>/FilterAdmin</url-pattern>
+    </filter-mapping>
     
-    <servlet>
-        <servlet-name>admin</servlet-name>
-        <jsp-file>/admin.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>admin</servlet-name>
+    <filter>
+        <filter-name>FilterLoginAdmin</filter-name>
+        <filter-class>Filters.ADMIN.FilterLoginAdmin</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterLoginAdmin</filter-name>
         <url-pattern>/admin</url-pattern>
-    </servlet-mapping>
+    </filter-mapping>
     
-    <servlet>
-        <servlet-name>orders</servlet-name>
-        <jsp-file>/orders.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>orders</servlet-name>
-        <url-pattern>/orders</url-pattern>
-    </servlet-mapping>
+    <filter>
+        <filter-name>FilterAddRoom</filter-name>
+        <filter-class>Filters.ADMIN.FilterAddRoom</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterAddRoom</filter-name>
+        <url-pattern>/FilterAddRoom</url-pattern>
+    </filter-mapping>
     
-        <servlet>
-        <servlet-name>ListAndOpen</servlet-name>
-        <jsp-file>/ListAndOpen.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>ListAndOpen</servlet-name>
-        <url-pattern>/ListAndOpen</url-pattern>
-    </servlet-mapping>
+    <filter>
+        <filter-name>FilterInvoice</filter-name>
+        <filter-class>Filters.ADMIN.FilterInvoice</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterInvoice</filter-name>
+        <url-pattern>/FilterInvoice</url-pattern>
+    </filter-mapping>
     
-    <servlet>
-        <servlet-name>addopenroom</servlet-name>
-        <jsp-file>/addopenroom.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>addopenroom</servlet-name>
-        <url-pattern>/addopenroom</url-pattern>
-    </servlet-mapping>
+    <filter>
+        <filter-name>FilterDeleteRoom</filter-name>
+        <filter-class>Filters.ADMIN.FilterDeleteRoom</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterDeleteRoom</filter-name>
+        <url-pattern>/FilterDeleteRoom</url-pattern>
+    </filter-mapping>
     
-    <servlet>
-        <servlet-name>cabinet</servlet-name>
-        <jsp-file>/cabinet.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>cabinet</servlet-name>
-        <url-pattern>/cabinet</url-pattern>
-    </servlet-mapping>
-     
-    <servlet>
-        <servlet-name>wait_order</servlet-name>
-        <jsp-file>/wait_order.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>wait_order</servlet-name>
-        <url-pattern>/wait_order</url-pattern>
-    </servlet-mapping>
     
     <session-config>
         <session-timeout>
